# PolymarketTerminal

./: .gitignore  CMakeLists.txt  main.cpp
data_analysis/: DisplayTimeseries.ipynb  TimeSeriesAPI.ipynb  market_cleaning.ipynb
data_analysis/timeseries_ts/src/: fetch_timeseries.ts
